--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -81,6 +81,7 @@ html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   scroll-behavior: auto;
+  overflow-x: hidden;
 }
 
 body {
